Scrollbar Bug Fixed

--- a/style.css
+++ b/style.css
@@ -1,7 +1,11 @@
-html,body{
+body{
     background-color: rgba(255, 255, 255, 0.815);
     overflow-x: hidden;
 }
+html{
+    overflow: visible;
+}
+
 
 .top{
     position: relative;
@@ -82,7 +86,7 @@ footer{
 }
 
 .skillsection{
-    margin-top: 50px;
+    margin-top: 45px;
     margin-bottom: 100px;
 }
 
